Add Netlify Edge example

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,10 @@
     "npm": true,
     ".bob": true,
     "**/.next": true
-  }
+  },
+  "deno.enable": true,
+  "deno.enablePaths": ["examples/netlify-edge/netlify/edge-functions"],
+  "deno.unstable": true,
+  "deno.importMap": "examples/netlify-edge/.netlify/edge-functions-import-map.json",
+  "deno.path": "/home/ardat_000/.config/netlify/deno-cli/deno"
 }
