--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,10 @@
     "**/.next": true
   },
   "deno.enable": true,
-  "deno.enablePaths": ["examples/netlify-edge/netlify/edge-functions"],
+  "deno.enablePaths": [
+    "examples/deno",
+    "examples/netlify-edge/netlify/edge-functions"
+  ],
   "deno.unstable": true,
   "deno.importMap": "examples/netlify-edge/.netlify/edge-functions-import-map.json",
   "deno.path": "/home/ardat_000/.config/netlify/deno-cli/deno"
