--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,5 @@
     "examples/netlify-edge/netlify/edge-functions"
   ],
   "deno.unstable": true,
-  "deno.importMap": "examples/netlify-edge/.netlify/edge-functions-import-map.json",
-  "deno.path": "/home/ardat_000/.config/netlify/deno-cli/deno"
+  "deno.importMap": "examples/netlify-edge/.netlify/edge-functions-import-map.json"
 }
