--- a/examples/netlify-edge/package.json
+++ b/examples/netlify-edge/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "start": "netlify dev"
+    "start": "netlify dev",
+    "check": "deno cache netlify/edge-functions/graphql.ts"
   },
   "devDependencies": {
     "netlify-cli": "^10.0.0"
