Add check script for Type Check workflow

--- a/examples/graphql-ws/package.json
+++ b/examples/graphql-ws/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "@graphql-yoga/node": "2.3.0",
