Add NodeJS FS interaction to File Upload example

--- a/examples/file-upload/package.json
+++ b/examples/file-upload/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.3.0",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node index.ts",
     "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
