--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
       "@graphql-yoga/render-graphiql": [
         "packages/render-graphiql/src/index.ts"
       ],
-      "graphql-yoga": ["packages/graphql-yoga/src/index.ts"]
+      "graphql-yoga": ["packages/graphql-yoga/src/index.ts"],
+      "@graphql-yoga/plugin-*": ["packages/plugins/*/src/index.ts"]
     },
     "jsx": "preserve"
   },
