--- a/package.json
+++ b/package.json
@@ -66,12 +66,13 @@
     "pretty-quick": "^3.1.2",
     "rimraf": "^3.0.2",
     "supertest": "^6.1.6",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "ts-jest": "^27.1.4"
   },
   "resolutions": {
     "@changesets/apply-release-plan": "6.0.0",
     "graphql": "16.4.0",
-    "cross-undici-fetch": "0.3.5",
+    "cross-undici-fetch": "0.3.6",
     "@types/react": "18.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
