feat(algolia): `algolia-sync` script + CI workflows

--- a/website/package.json
+++ b/website/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "algolia-sync": "ts-node scripts/algolia-ci.ts",
     "postbuild": "npx next-sitemap && ts-node scripts/sitemap-ci.ts",
     "dev": "concurrently -r \"next-remote-watch ./docs ./routes.ts ./src/pages/_app.tsx ./src/pages/_document.tsx\" \"wait-on -s 1 http://localhost:3000 && open-cli http://localhost:3000\"",
     "next": "next",
@@ -12,6 +13,7 @@
     "check": "exit 0"
   },
   "devDependencies": {
+    "@guild-docs/algolia": "0.0.2-alpha-b736bdc.0",
     "@next/bundle-analyzer": "^12.0.10",
     "@types/concurrently": "^6.4.0",
     "@types/mdx-js__react": "^1.5.5",
