--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest --passWithNoTests",
     "release": "yarn build && changeset publish",
     "release:canary": "(node scripts/canary-release.js && yarn build && yarn changeset publish --tag canary) || echo Skipping Canary...",
-    "start:docs": "yarn workspace @graphql-yoga/website dev",
+    "start:docs": "yarn workspace website dev",
     "postinstall": "patch-package && husky install",
     "fix-bin": "node scripts/fix-bin.js",
     "build-website": "yarn build && cd website && yarn build"
