--- a/website/package.json
+++ b/website/package.json
@@ -41,7 +41,7 @@
     "@graphql-yoga/render-graphiql": "2.6.0",
     "@guild-docs/client": "^1.4.0",
     "@guild-docs/server": "^2.2.0",
-    "@theguild/components": "^1.11.3-alpha-1134f71.0",
+    "@theguild/components": "1.11.3-alpha-1134f71.0",
     "framer-motion": "^6.2.6",
     "graphql": "16.4.0",
     "next": "^12.0.10",
