--- a/examples/file-upload-nextjs-pothos/package.json
+++ b/examples/file-upload-nextjs-pothos/package.json
@@ -14,11 +14,11 @@
     "@pothos/core": "3.5.0",
     "graphql": "16.3.0",
     "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/react": "18.0.0",
+    "@types/react": "^17.0.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
     "typescript": "4.6.3"
