--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@graphql-tools/url-loader": "^7.9.10",
     "copy-to-clipboard": "^3.3.1",
-    "graphiql": "^1.8.4",
+    "graphiql": "1.8.4",
     "graphiql-explorer": "^0.9.0",
     "graphql": "^16.3.0",
     "react": "17.0.2",
