fix: graphql-tools/url-loader is the culprit!

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "ts-jest": "^28.0.0"
   },
   "resolutions": {
+    "@graphql-tools/url-loader": "7.9.10",
     "@changesets/apply-release-plan": "6.0.0",
     "graphql": "16.4.0",
     "cross-undici-fetch": "0.4.2",
