--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest --passWithNoTests",
     "release": "yarn build && changeset publish",
     "release:canary": "(node scripts/canary-release.js && yarn build && yarn changeset publish --tag canary) || echo Skipping Canary...",
-    "start:docs": "yarn workspace @graphql-yoga/website dev",
+    "start:docs": "yarn workspace website dev",
     "postinstall": "patch-package && husky install",
     "fix-bin": "node scripts/fix-bin.js",
     "build-website": "yarn build && cd website && yarn build"
@@ -71,11 +71,13 @@
     "ts-jest": "^28.0.0"
   },
   "resolutions": {
+    "@graphql-tools/url-loader": "7.9.12",
     "@changesets/apply-release-plan": "6.0.0",
     "graphql": "16.4.0",
     "cross-undici-fetch": "0.4.2",
-    "@types/react": "18.0.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "@types/react": "17.0.39",
+    "@types/react-dom": "17.0.11",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
