--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -29,9 +29,9 @@
     "vite": "2.9.8"
   },
   "dependencies": {
-    "@graphql-tools/url-loader": "^7.9.10",
+    "@graphql-tools/url-loader": "^7.9.19",
     "copy-to-clipboard": "^3.3.1",
-    "graphiql": "1.8.4",
+    "graphiql": "^1.8.8",
     "graphiql-explorer": "^0.9.0",
     "graphql": "^16.3.0",
     "react": "17.0.2",
