--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -51,6 +51,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@envelop/disable-introspection": "^3.3.1",
     "@envelop/live-query": "3.3.1",
     "@types/eventsource": "^1",
     "@types/node": "^16.11.7",
@@ -58,8 +59,8 @@
     "bob-the-bundler": "^1.5.1",
     "eventsource": "^2.0.0",
     "graphql": "^16.0.1",
-    "puppeteer": "13.7.0",
-    "graphql-scalars": "^1.16.1"
+    "graphql-scalars": "^1.16.1",
+    "puppeteer": "13.7.0"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
