chore(website): deps to stable versions

--- a/website/package.json
+++ b/website/package.json
@@ -13,7 +13,7 @@
     "check": "exit 0"
   },
   "devDependencies": {
-    "@guild-docs/algolia": "0.0.2-alpha-b62be62.0",
+    "@guild-docs/algolia": "0.0.2",
     "@next/bundle-analyzer": "^12.0.10",
     "@types/concurrently": "^6.4.0",
     "@types/mdx-js__react": "^1.5.5",
@@ -41,7 +41,7 @@
     "@graphql-yoga/render-graphiql": "2.6.0",
     "@guild-docs/client": "^1.4.0",
     "@guild-docs/server": "^2.2.0",
-    "@theguild/components": "1.11.3-alpha-85bced1.0",
+    "@theguild/components": "1.11.3",
     "framer-motion": "^6.2.6",
     "graphql": "16.4.0",
     "next": "^12.0.10",
