--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Use Node 18
-        uses: actions/setup-node@master
+        uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'yarn'
@@ -23,10 +23,10 @@ jobs:
         run: yarn build
 
       - name: Typecheck
-        run: yarn workspace website run build
+        run: yarn workspace website build
 
       - name: Algolia generate
-        run: yarn workspace website run algolia-sync
+        run: yarn workspace website algolia-sync
         env:
           ALGOLIA_DRY_RUN: true
           SITE_URL: https://www.graphql-yoga.com/
