--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -4,7 +4,7 @@ on:
     paths:
       - 'website/**'
 jobs:
-  website-check:
+  algolia-records-check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
