chore(ci): Algolia publish step name

--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   algolia-push-records:
-    name: Release
+    name: Push new records if changes
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
