--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -31,6 +31,9 @@ jobs:
           ALGOLIA_DRY_RUN: true
           SITE_URL: https://www.graphql-yoga.com/
 
+      - name: Format
+        run: yarn format
+
       - name: Diff
         run: git diff --exit-code -- website/algolia-lockfile.json
 
