--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -1,13 +1,14 @@
-name: Release
+name: Algolia Publish
 
 on:
   push:
     branches:
       - master
+      - feat/docs-search--test-master
 
 jobs:
-  release:
-    name: Release
+  algolia-push-records:
+    name: Push new records if changes
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -36,11 +37,17 @@ jobs:
           ALGOLIA_INDEX_NAME: ${{ secrets.ALGOLIA_INDEX_NAME }}
           SITE_URL: https://www.graphql-yoga.com/
 
+      - name: Format
+        run: yarn format
+
+      - name: Compare
+        run: git diff website/algolia-lockfile.json
+
       - name: Diff to file
         if: always()
         id: diff_result
         run: |
-          OUTPUT=$(git diff origin/${{ github.base_ref }}.. -- website/algolia-lockfile.json)
+          OUTPUT=$(git diff website/algolia-lockfile.json)
           OUTPUT="${OUTPUT//'%'/'%25'}"
           OUTPUT="${OUTPUT//$'\n'/'%0A'}"
           OUTPUT="${OUTPUT//$'\r'/'%0D'}"
@@ -50,5 +57,6 @@ jobs:
         if: always() && contains(steps.diff_result.outputs.result, 'diff')
         uses: EndBug/add-and-commit@v9
         with:
+          commit: website/algolia-lockfile.json
           message: Update algolia-lockfile.json
           default_author: github_actions
