--- a/website/package.json
+++ b/website/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "algolia-sync": "node scripts/algolia-ci.mjs",
     "postbuild": "npx next-sitemap && node scripts/sitemap-ci.mjs",
     "dev": "concurrently -r \"next-remote-watch ./docs ./routes.ts ./src/pages/_app.tsx ./src/pages/_document.tsx\" \"wait-on -s 1 http://localhost:3000 && open-cli http://localhost:3000\"",
     "next": "next",
@@ -12,6 +13,7 @@
     "check": "exit 0"
   },
   "devDependencies": {
+    "@guild-docs/algolia": "0.0.3",
     "@next/bundle-analyzer": "^12.0.10",
     "@types/concurrently": "^6.4.0",
     "@types/mdx-js__react": "^1.5.5",
@@ -41,7 +43,7 @@
     "@guild-docs/client": "^2.1.1",
     "@guild-docs/server": "^3.0.1",
     "@mdx-js/react": "^2.1.1",
-    "@theguild/components": "1.11.2",
+    "@theguild/components": "1.11.3",
     "framer-motion": "^6.2.6",
     "graphql": "16.4.0",
     "next": "^12.0.10",
