--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -52,11 +52,12 @@
     "@graphql-tools/utils": "^8.6.0",
     "@graphql-yoga/subscription": "2.0.0",
     "cross-undici-fetch": "^0.4.2",
-    "dset": "^3.1.1",
+    "object-path": "0.11.8",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
+    "@types/object-path": "0.11.1",
     "@minify-html/js": "0.8.0",
     "bob-the-bundler": "^1.5.1"
   },
