--- a/e2e/package.json
+++ b/e2e/package.json
@@ -10,7 +10,7 @@
     "@pulumi/awsx": "0.40.0",
     "@pulumi/aws": "5.4.0",
     "@pulumi/docker": "3.2.0",
-    "@types/node": "17.0.23",
+    "@types/node": "^16.11.7",
     "typescript": "4.6.4",
     "tsup": "5.12.7",
     "undici": "5.1.1"
