--- a/examples/aws-lambda/package.json
+++ b/examples/aws-lambda/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@aws-cdk/assert": "2.17.0",
     "@types/aws-lambda": "8.10.93",
-    "@types/node": "17.0.23",
+    "@types/node": "^16.11.7",
     "ts-node": "10.7.0",
     "aws-cdk": "2.17.0",
     "aws-cdk-lib": "2.17.0",
