Add more for Cloudflare Workers

--- a/examples/cloudflare-modules/wrangler.toml
+++ b/examples/cloudflare-modules/wrangler.toml
@@ -5,7 +5,7 @@ account_id = ""
 workers_dev = true
 
 compatibility_date = "2021-11-15"
-compatibility_flags = []
+compatibility_flags = ["streams_enable_constructors"]
 
 [build]
 command = "npm run build"
