apply `no-else-return` rule fixes

--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,5 @@
       "matchPackagePrefixes": "@envelop"
     }
   ],
-  "ignoreDeps": [
-    "@types/react"
-  ]
+  "ignoreDeps": ["@types/react"]
 }
