--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:docs": "yarn workspace website dev",
     "postinstall": "patch-package && husky install",
     "fix-bin": "node scripts/fix-bin.js",
+    "lint": "eslint --ignore-path .gitignore --ext ts,js,tsx,jsx .",
     "build-website": "yarn build && cd website && yarn build"
   },
   "repository": {
@@ -55,10 +56,13 @@
     "@types/babel__preset-env": "^7",
     "@types/jest": "^27.0.2",
     "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
     "babel-jest": "^28.0.0",
     "babel-plugin-parameter-decorator": "1.0.16",
     "babel-plugin-transform-typescript-metadata": "0.3.2",
     "bob-the-bundler": "^1.5.1",
+    "eslint": "^8.15.0",
     "graphql": "^16.1.0",
     "husky": "^8.0.0",
     "jest": "^28.0.0",
@@ -67,8 +71,8 @@
     "pretty-quick": "^3.1.2",
     "rimraf": "^3.0.2",
     "supertest": "^6.1.6",
-    "typescript": "^4.4.4",
-    "ts-jest": "^28.0.0"
+    "ts-jest": "^28.0.0",
+    "typescript": "^4.4.4"
   },
   "resolutions": {
     "@changesets/apply-release-plan": "6.0.0",
