--- a/examples/cloudflare-modules/package.json
+++ b/examples/cloudflare-modules/package.json
@@ -23,6 +23,7 @@
     "miniflare": "^2.0.0",
     "prettier": "^2.4.1",
     "typescript": "^4.4.4",
-    "tslib": "2.3.1"
+    "tslib": "2.3.1",
+    "wrangler": "2.0.6"
   }
 }
