--- a/examples/cloudflare-modules/wrangler.toml
+++ b/examples/cloudflare-modules/wrangler.toml
@@ -1,5 +1,4 @@
 name = "graphql-yoga-example"
-type = "javascript"
 
 account_id = ""
 workers_dev = true
@@ -7,10 +6,7 @@ workers_dev = true
 compatibility_date = "2021-11-15"
 compatibility_flags = ["streams_enable_constructors"]
 
+main = "./dist/index.mjs"
+
 [build]
 command = "npm run build"
-
-[build.upload]
-format = "modules"
-dir = "dist"
-main = "./index.mjs"
