--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -8,7 +8,7 @@
 		"test": "playwright test",
 		"build": "yarn prepare && svelte-kit build",
 		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
+		"preview": "svelte-kit preview -p 3007",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
