Simplify CF examples

--- a/examples/cloudflare-modules/wrangler.toml
+++ b/examples/cloudflare-modules/wrangler.toml
@@ -6,7 +6,4 @@ workers_dev = true
 compatibility_date = "2021-11-15"
 compatibility_flags = ["streams_enable_constructors"]
 
-main = "./dist/index.mjs"
-
-[build]
-command = "npm run build"
+main = "./src/index.ts"
