--- a/examples/service-worker/wrangler.toml
+++ b/examples/service-worker/wrangler.toml
@@ -1,7 +1,6 @@
 compatibility_date = "2022-02-21"
-type = "webpack"
 name = "graphql-yoga"
 account_id = ""
 workers_dev = true
-webpack_config = "webpack.config.js"
+main = "src/index.ts"
 compatibility_flags = ["streams_enable_constructors"]
