--- a/examples/service-worker/package.json
+++ b/examples/service-worker/package.json
@@ -3,7 +3,9 @@
   "version": "0.8.0",
   "private": true,
   "scripts": {
+    "build": "wrangler publish --outdir=dist",
     "start": "wrangler dev",
+    "test": "jest",
     "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
@@ -11,11 +13,7 @@
     "graphql": "16.3.0"
   },
   "devDependencies": {
-    "@cloudflare/wrangler": "1.19.8",
     "typescript": "4.5.5",
-    "ts-loader": "8.1.0",
-    "webpack": "4.46.0",
-    "@types/service-worker-mock": "2.0.1",
-    "service-worker-mock": "2.0.5"
+    "wrangler": "2.0.6"
   }
 }
