--- a/examples/cloudflare-modules/package.json
+++ b/examples/cloudflare-modules/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "module": "./dist/index.mjs",
   "scripts": {
-    "build": "wrangler publish --outdir=dist",
+    "build": "wrangler publish --dry-run --outdir=dist",
     "start": "wrangler dev",
     "test": "npm run build && node --experimental-vm-modules ../../node_modules/jest/bin/jest.js",
     "check": "tsc --pretty --noEmit"
