--- a/benchmark/hello-world/package.json
+++ b/benchmark/hello-world/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@graphql-yoga/node": "2.9.0",
-    "graphql": "16.5.0",
-    "wait-on": "6.0.1"
+    "graphql": "16.5.0"
   }
 }
