--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -19,11 +19,14 @@
 		"@sveltejs/kit": "1.0.0-next.348",
 		"@typescript-eslint/eslint-plugin": "5.24.0",
 		"@typescript-eslint/parser": "5.24.0",
+		"@types/jest": "^28.0.0",
 		"eslint": "8.15.0",
 		"eslint-config-prettier": "8.5.0",
 		"eslint-plugin-svelte3": "4.0.0",
 		"prettier": "2.6.2",
 		"prettier-plugin-svelte": "2.7.0",
+		"jest": "^28.0.0",
+		"puppeteer": "14.2.1",
 		"svelte": "3.48.0",
 		"svelte-check": "2.7.1",
 		"svelte-preprocess": "4.10.6",
