--- a/examples/cloudflare-modules/package.json
+++ b/examples/cloudflare-modules/package.json
@@ -7,22 +7,14 @@
   "scripts": {
     "build": "wrangler publish --dry-run --outdir=dist",
     "start": "wrangler dev",
-    "test": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js",
     "check": "tsc --pretty --noEmit"
   },
+  "dependencies": {
+    "@graphql-yoga/common": "2.8.0",
+    "graphql": "16.5.0"
+  },
   "devDependencies": {
-    "@babel/core": "7.17.5",
-    "@babel/preset-env": "7.16.11",
-    "@babel/preset-typescript": "7.16.7",
-    "@babel/plugin-transform-runtime": "7.17.0",
-    "babel-jest": "^27.3.1",
-    "@types/jest": "^27.0.2",
-    "jest": "^27.3.1",
-    "jest-environment-miniflare": "^2.0.0",
-    "miniflare": "^2.0.0",
-    "prettier": "^2.4.1",
     "typescript": "^4.4.4",
-    "tslib": "2.3.1",
     "wrangler": "2.0.6"
   }
 }
