--- a/examples/sveltekit/tsconfig.json
+++ b/examples/sveltekit/tsconfig.json
@@ -1,3 +1,7 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json"
+	"extends": "./.svelte-kit/tsconfig.json",
+	"compilerOptions": {
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true
+	}
 }
