--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -3,35 +3,40 @@
 	"version": "0.8.1",
 	"private": true,
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
+		"prepare": "svelte-kit sync",
+		"dev": "yarn prepare && svelte-kit dev",
+		"test": "jest",
+		"build": "yarn prepare && svelte-kit build",
 		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
+		"preview": "svelte-kit preview -p 3007",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "1.0.0-next.23",
-		"@sveltejs/kit": "1.0.0-next.278",
-		"@typescript-eslint/eslint-plugin": "^4.31.1",
-		"@typescript-eslint/parser": "^4.31.1",
-		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
-		"prettier": "^2.4.1",
-		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.9.4",
-		"tslib": "^2.3.1",
-		"typescript": "^4.4.4"
+		"@sveltejs/adapter-auto": "1.0.0-next.50",
+		"@sveltejs/kit": "1.0.0-next.348",
+		"@typescript-eslint/eslint-plugin": "5.24.0",
+		"@typescript-eslint/parser": "5.24.0",
+		"@types/jest": "^28.0.0",
+		"eslint": "8.15.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-plugin-svelte3": "4.0.0",
+		"prettier": "2.6.2",
+		"prettier-plugin-svelte": "2.7.0",
+		"jest": "^28.0.0",
+		"puppeteer": "14.2.1",
+		"svelte": "3.48.0",
+		"svelte-check": "2.7.1",
+		"svelte-preprocess": "4.10.6",
+		"tslib": "2.4.0",
+		"typescript": "4.6.4"
 	},
 	"dependencies": {
-		"@envelop/graphql-jit": "^3.0.0",
+		"@envelop/graphql-jit": "4.2.3",
 		"@graphql-yoga/common": "2.8.1",
-		"graphql": "^16.2.0"
+		"graphql": "16.5.0"
 	},
 	"type": "module"
 }
