--- a/examples/generic-auth/package.json
+++ b/examples/generic-auth/package.json
@@ -19,7 +19,7 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
-    "@envelop/generic-auth": "4.2.1",
+    "@envelop/generic-auth": "4.2.4-alpha-a2dc2ab.0",
     "@graphql-yoga/node": "2.5.0",
     "graphql": "16.3.0"
   }
