--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.17",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "@graphql-tools/utils": "8.6.12"
   }
 }
