--- a/examples/generic-auth/package.json
+++ b/examples/generic-auth/package.json
@@ -19,7 +19,7 @@
     "typescript": "4.4.4"
   },
   "dependencies": {
-    "@envelop/generic-auth": "4.2.4-alpha-a2dc2ab.0",
+    "@envelop/generic-auth": "4.2.4",
     "@graphql-yoga/node": "2.9.0",
     "graphql": "16.5.0"
   }
