--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,17 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
 
+      - name: Cache Node Modules
+        uses: actions/cache@v3
+        id: node-modules-cache-test-node
+        with:
+          path: '**/node_modules'
+          key: ${{runner.os}}-${{ matrix.node-version }}-node-modules-${{hashFiles('yarn.lock')}}
+          restore-keys: |
+            ${{runner.os}}-${{ matrix.node-version }}-node-modules-
       - name: Install Dependencies using Yarn
-        run: yarn --ignore-engines
+        run: yarn install --ignore-engines --frozen-lockfile --immutable
+        if: steps.node-modules-cache-test-node.outputs.cache-hit != 'true'
 
       - name: Build Packages
         run: yarn build
@@ -45,8 +54,17 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
+      - name: Cache Node Modules
+        uses: actions/cache@v3
+        id: node-modules-cache-test-esm
+        with:
+          path: '**/node_modules'
+          key: ${{runner.os}}-18-node-modules-${{hashFiles('yarn.lock')}}
+          restore-keys: |
+            ${{runner.os}}-18-node-modules-
       - name: Install Dependencies using Yarn
-        run: yarn --ignore-engines
+        run: yarn install --ignore-engines --frozen-lockfile --immutable
+        if: steps.node-modules-cache-test-esm.outputs.cache-hit != 'true'
 
       - name: Build Packages
         run: yarn build
@@ -71,8 +89,17 @@ jobs:
       - name: Use Deno
         uses: denoland/setup-deno@v1
 
+      - name: Cache Node Modules
+        uses: actions/cache@v3
+        id: node-modules-cache-type-check
+        with:
+          path: '**/node_modules'
+          key: ${{runner.os}}-18-node-modules-${{hashFiles('yarn.lock')}}
+          restore-keys: |
+            ${{runner.os}}-18-node-modules-
       - name: Install Dependencies using Yarn
-        run: yarn --ignore-engines
+        run: yarn install --ignore-engines --frozen-lockfile --immutable
+        if: steps.node-modules-cache-type-check.outputs.cache-hit != 'true'
 
       - name: Build Packages
         run: yarn build
