--- a/.github/workflows/deployment-e2e.yml
+++ b/.github/workflows/deployment-e2e.yml
@@ -22,8 +22,17 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
+      - name: Cache Node Modules
+        uses: actions/cache@v3
+        id: node-modules-cache-deployment-e2e
+        with:
+          path: '**/node_modules'
+          key: ${{runner.os}}-18-node-modules-${{hashFiles('yarn.lock')}}
+          restore-keys: |
+            ${{runner.os}}-18-node-modules-
       - name: Install Dependencies using Yarn
-        run: yarn --ignore-engines
+        run: yarn install --ignore-engines --frozen-lockfile --immutable
+        if: steps.node-modules-cache-deployment-e2e.outputs.cache-hit != 'true'
 
       - name: Build Packages
         run: yarn build
