--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,8 +27,17 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
+      - name: Cache Node Modules
+        uses: actions/cache@v3
+        id: node-modules-cache-release
+        with:
+          path: '**/node_modules'
+          key: ${{runner.os}}-18-node-modules-${{hashFiles('yarn.lock')}}
+          restore-keys: |
+            ${{runner.os}}-18-node-modules-
       - name: Install Dependencies using Yarn
-        run: yarn
+        run: yarn install --ignore-engines --frozen-lockfile --immutable
+        if: steps.node-modules-cache-release.outputs.cache-hit != 'true'
 
       - name: Build Packages
         run: yarn build
