--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "resolveJsonModule": true
   },
   "include": ["./**/*.ts"]
 }
