--- a/e2e/package.json
+++ b/e2e/package.json
@@ -10,10 +10,9 @@
     "@pulumi/awsx": "0.40.0",
     "@pulumi/aws": "5.8.0",
     "@pulumi/docker": "3.2.0",
-    "@types/node": "^16.11.7",
+    "@types/node": "^17.0.42",
     "typescript": "4.7.3",
-    "tsup": "6.1.2",
-    "undici": "5.4.0"
+    "tsup": "6.1.2"
   },
   "scripts": {
     "build": "tsup index.ts",
