--- a/e2e/package.json
+++ b/e2e/package.json
@@ -12,12 +12,10 @@
     "@pulumi/docker": "3.2.0",
     "@types/node": "^17.0.42",
     "typescript": "4.7.3",
-    "tsup": "6.1.2"
+    "ts-node": "10.8.1"
   },
   "scripts": {
-    "build": "tsup index.ts",
-    "prestart": "yarn build",
-    "start": "node dist/index.js",
-    "check": "exit 0"
+    "start": "ts-node --transpile-only index.ts",
+    "check": "tsc --noEmit"
   }
 }
