--- a/examples/fastify/package.json
+++ b/examples/fastify/package.json
@@ -10,7 +10,8 @@
     "@graphql-yoga/node": "2.9.2",
     "fastify": "4.0.2",
     "ts-node": "10.4.0",
-    "typescript": "4.5.2"
+    "typescript": "4.5.2",
+    "pino-pretty": "8.0.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.7"
