feat: add redis event target draft

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "workspaces": [
     "packages/*",
     "packages/plugins/*",
+    "packages/event-target/*",
     "examples/**/*",
     "benchmark/*",
     "website",
