--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,10 @@
         "packages/render-graphiql/src/index.ts"
       ],
       "graphql-yoga": ["packages/graphql-yoga/src/index.ts"],
-      "@graphql-yoga/plugin-*": ["packages/plugins/*/src/index.ts"]
+      "@graphql-yoga/plugin-*": ["packages/plugins/*/src/index.ts"],
+      "@graphql-yoga/typed-event-target": [
+        "packages/event-target/typed-event-target/src/index.ts"
+      ]
     },
     "jsx": "preserve"
   },
