--- a/packages/subscription/package.json
+++ b/packages/subscription/package.json
@@ -63,6 +63,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@graphql-yoga/typed-event-target": "^0.0.0",
     "@repeaterjs/repeater": "^3.0.4",
     "tslib": "^2.3.1"
   },
