chore: use pure js library for minifying html

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -57,8 +57,8 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
-    "@minify-html/js": "0.8.1",
-    "bob-the-bundler": "^1.5.1"
+    "bob-the-bundler": "^1.5.1",
+    "html-minifier-terser": "7.0.0-beta.0"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
