--- a/packages/subscription/package.json
+++ b/packages/subscription/package.json
@@ -26,13 +26,26 @@
   },
   "exports": {
     ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "require": {
+        "default": "./dist/index.js",
+        "types": "./dist/index.d.ts"
+      },
+      "import": {
+        "default": "./dist/index.mjs",
+        "types": "./dist/index.d.ts"
+      }
     },
     "./*": {
-      "require": "./dist/*.js",
-      "import": "./dist/*.mjs"
-    }
+      "require": {
+        "default": "./dist/*.js",
+        "types": "./dist/*.d.ts"
+      },
+      "import": {
+        "default": "./dist/*.mjs",
+        "types": "./dist/*.d.ts"
+      }
+    },
+    "./package.json": "./package.json"
   },
   "typings": "dist/index.d.ts",
   "typescript": {
@@ -48,6 +61,6 @@
   },
   "devDependencies": {
     "event-target-polyfill": "0.0.3",
-    "bob-the-bundler": "^1.5.1"
+    "bob-the-bundler": "2.0.0-canary-190c364.0"
   }
 }
