--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,13 @@
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "dist",
-
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "importHelpers": true,
     "experimentalDecorators": true,
     "module": "esnext",
-    "target": "es2018",
-    "lib": ["es6", "esnext", "es2015", "dom", "webworker"],
+    "target": "es2020",
+    "lib": ["es2020", "dom", "webworker"],
     "suppressImplicitAnyIndexErrors": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
