--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "babel-jest": "^28.0.0",
     "babel-plugin-parameter-decorator": "1.0.16",
     "babel-plugin-transform-typescript-metadata": "0.3.2",
-    "bob-the-bundler": "^1.5.1",
+    "bob-the-bundler": "2.0.0-canary-190c364.0",
     "eslint": "^8.15.0",
     "graphql": "^16.1.0",
     "husky": "^8.0.0",
