--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -27,13 +27,26 @@
   },
   "exports": {
     ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "require": {
+        "default": "./dist/index.js",
+        "types": "./dist/index.d.ts"
+      },
+      "import": {
+        "default": "./dist/index.mjs",
+        "types": "./dist/index.d.ts"
+      }
     },
     "./*": {
-      "require": "./dist/*.js",
-      "import": "./dist/*.mjs"
-    }
+      "require": {
+        "default": "./dist/*.js",
+        "types": "./dist/*.d.ts"
+      },
+      "import": {
+        "default": "./dist/*.mjs",
+        "types": "./dist/*.d.ts"
+      }
+    },
+    "./package.json": "./package.json"
   },
   "typings": "dist/index.d.ts",
   "typescript": {
@@ -57,7 +70,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
-    "bob-the-bundler": "^1.5.1",
+    "bob-the-bundler": "2.0.0-canary-190c364.0",
     "html-minifier-terser": "7.0.0-beta.0"
   },
   "peerDependencies": {
