--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -20,17 +20,19 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
-      - name: Cache Node Modules
-        uses: actions/cache@v3
-        id: node-modules-cache-canary
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Cache Yarn
+        uses: actions/cache@v2
         with:
-          path: '**/node_modules'
-          key: ${{runner.os}}-18-node-modules-${{hashFiles('yarn.lock')}}
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-18-yarn-${{ hashFiles('yarn.lock') }}
           restore-keys: |
-            ${{runner.os}}-18-node-modules-
+            ${{ runner.os }}-18-yarn-
+
       - name: Install Dependencies using Yarn
-        run: yarn install --ignore-engines --frozen-lockfile --immutable
-        if: steps.node-modules-cache-canary.outputs.cache-hit != 'true'
+        run: yarn install --ignore-engines --frozen-lockfile
 
       - name: Setup NPM credentials
         run: echo "//registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN" >> ~/.npmrc
