--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,11 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "search.exclude": {
     "**/.yarn": true,
-    "**/.pnp.*": true
+    "**/.pnp.*": true,
+    ".bob": true,
+    "**/.next": true,
+    "**/node_modules": true,
+    "**/dist": true
   },
   "prettier.prettierPath": ".yarn/sdks/prettier/index.js",
   "typescript.tsdk": ".yarn/sdks/typescript/lib",
@@ -13,14 +17,10 @@
   "files.exclude": {
     "**/.git": true,
     "**/.DS_Store": true,
-    "**/node_modules": true,
-    "**/dist": true,
     "test-lib": true,
     "lib": true,
     "coverage": true,
-    "npm": true,
-    ".bob": true,
-    "**/.next": true
+    "npm": true
   },
   "deno.enable": true,
   "deno.enablePaths": [
