--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -8,7 +8,6 @@
     "url": "https://github.com/dotansimha/graphql-yoga.git",
     "directory": "packages/graphiql"
   },
-  "main": "dist/yoga-graphiql.es.js",
   "files": [
     "dist"
   ],
@@ -38,5 +37,15 @@
     "react-dom": "17.0.2",
     "use-url-search-params": "^2.5.1",
     "json-bigint-patch": "^0.0.8"
+  },
+  "main": "dist/yoga-graphiql.umd.js",
+  "module": "dist/yoga-graphiql.es.js",
+  "exports": {
+    ".": {
+      "require": "./dist/yoga-graphiql.umd.js",
+      "import": "./dist/yoga-graphiql.es.js",
+      "default": "./dist/yoga-graphiql.es.js"
+    },
+    "./package.json": "./package.json"
   }
 }
