--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -26,13 +26,34 @@
   },
   "exports": {
     ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.mjs"
+      },
+      "default": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.mjs"
+      }
     },
     "./*": {
-      "require": "./dist/*.js",
-      "import": "./dist/*.mjs"
-    }
+      "require": {
+        "types": "./dist/*.d.ts",
+        "default": "./dist/*.js"
+      },
+      "import": {
+        "types": "./dist/*.d.ts",
+        "default": "./dist/*.mjs"
+      },
+      "default": {
+        "types": "./dist/*.d.ts",
+        "default": "./dist/*.mjs"
+      }
+    },
+    "./package.json": "./package.json"
   },
   "typings": "dist/index.d.ts",
   "typescript": {
@@ -55,7 +76,7 @@
     "@envelop/live-query": "3.3.3",
     "@types/eventsource": "^1",
     "@types/node": "^16.11.7",
-    "bob-the-bundler": "^1.5.1",
+    "bob-the-bundler": "2.0.0-canary-730aea6.0",
     "eventsource": "^2.0.0",
     "graphql": "^16.0.1",
     "graphql-scalars": "^1.16.1",
