--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/dotansimha/graphql-yoga.git",
     "directory": "packages/graphql-yoga"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "bin": {
     "gql-yoga": "dist/bin.js",
     "graphql-yoga": "dist/bin.js",
@@ -37,37 +37,37 @@
   "exports": {
     ".": {
       "require": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/cjs/index.js"
       },
       "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.mjs"
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/esm/index.js"
       },
       "default": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.mjs"
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/esm/index.js"
       }
     },
     "./*": {
       "require": {
-        "types": "./dist/*.d.ts",
-        "default": "./dist/*.js"
+        "types": "./dist/typings/*.d.ts",
+        "default": "./dist/cjs/*.js"
       },
       "import": {
-        "types": "./dist/*.d.ts",
-        "default": "./dist/*.mjs"
+        "types": "./dist/typings/*.d.ts",
+        "default": "./dist/esm/*.js"
       },
       "default": {
-        "types": "./dist/*.d.ts",
-        "default": "./dist/*.mjs"
+        "types": "./dist/typings/*.d.ts",
+        "default": "./dist/esm/*.js"
       }
     },
     "./package.json": "./package.json"
   },
-  "typings": "dist/index.d.ts",
+  "typings": "dist/typings/index.d.ts",
   "typescript": {
-    "definition": "dist/index.d.ts"
+    "definition": "dist/typings/index.d.ts"
   },
   "publishConfig": {
     "directory": "dist",
@@ -86,5 +86,6 @@
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
-  }
+  },
+  "type": "module"
 }
