--- a/examples/graphql-ws/package.json
+++ b/examples/graphql-ws/package.json
@@ -11,7 +11,6 @@
     "graphql": "16.3.0",
     "graphql-ws": "0.6.2",
     "ws": "8.5.0",
-    "ts-node": "10.7.0",
-    "typescript": "4.6.3"
+    "ts-node": "10.7.0"
   }
 }
