--- a/examples/live-query/package.json
+++ b/examples/live-query/package.json
@@ -9,8 +9,7 @@
   },
   "devDependencies": {
     "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
     "@envelop/live-query": "3.3.0",
