--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -11,7 +11,6 @@
     "@types/express": "^4.17.13",
     "express": "^4.17.1",
     "supertest": "^6.1.6",
-    "ts-node": "10.4.0",
-    "typescript": "4.5.2"
+    "ts-node": "10.4.0"
   }
 }
