--- a/examples/fastify-modules/package.json
+++ b/examples/fastify-modules/package.json
@@ -13,8 +13,7 @@
     "fastify": "4.0.2",
     "graphql-modules": "2.0.0",
     "reflect-metadata": "0.1.13",
-    "ts-node": "10.4.0",
-    "typescript": "4.5.2"
+    "ts-node": "10.4.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.7"
