--- a/examples/file-upload-nexus/package.json
+++ b/examples/file-upload-nexus/package.json
@@ -10,7 +10,6 @@
     "@graphql-yoga/node": "2.9.2",
     "graphql": "16.1.0",
     "nexus": "^1.3.0",
-    "ts-node": "10.4.0",
-    "typescript": "4.5.2"
+    "ts-node": "10.4.0"
   }
 }
