--- a/examples/file-upload/package.json
+++ b/examples/file-upload/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "@graphql-yoga/node": "2.9.2",
     "graphql": "16.1.0",
-    "ts-node": "10.4.0",
-    "typescript": "4.5.2"
+    "ts-node": "10.4.0"
   }
 }
