--- a/examples/koa/package.json
+++ b/examples/koa/package.json
@@ -11,7 +11,6 @@
     "@types/koa": "2.13.4",
     "koa": "2.13.4",
     "supertest": "^6.1.6",
-    "ts-node": "10.4.0",
-    "typescript": "4.5.2"
+    "ts-node": "10.4.0"
   }
 }
