--- a/examples/subscriptions/package.json
+++ b/examples/subscriptions/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "@graphql-yoga/node": "2.9.2",
     "graphql": "^16.1.0",
-    "ts-node": "10.4.0",
-    "typescript": "^4.4.4"
+    "ts-node": "10.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.6.2",
