chore: one typescript version is enough

--- a/website/package.json
+++ b/website/package.json
@@ -28,7 +28,7 @@
     "next-remote-watch": "^1.0.0",
     "open-cli": "^7.0.1",
     "fast-xml-parser": "^4.0.7",
-    "typescript": "^4.5.5",
+    "typescript": "4.7.4",
     "wait-on": "^6.0.1"
   },
   "dependencies": {
