--- a/examples/aws-lambda-bundle/package.json
+++ b/examples/aws-lambda-bundle/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "esbuild": "0.14.28",
-    "typescript": "^4.4.4",
+    "typescript": "4.7.4",
     "tslib": "2.3.1"
   }
 }
