--- a/examples/azure-function/package.json
+++ b/examples/azure-function/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "@azure/functions": "3.0.0",
     "esbuild": "0.14.28",
-    "typescript": "^4.4.4",
+    "typescript": "4.7.4",
     "tslib": "2.3.1"
   }
 }
