--- a/examples/cloudflare-modules/package.json
+++ b/examples/cloudflare-modules/package.json
@@ -14,7 +14,7 @@
     "graphql": "16.5.0"
   },
   "devDependencies": {
-    "typescript": "^4.4.4",
+    "typescript": "4.7.4",
     "wrangler": "2.0.6"
   }
 }
