--- a/examples/defer-stream/package.json
+++ b/examples/defer-stream/package.json
@@ -10,6 +10,6 @@
     "@graphql-yoga/node": "2.9.2",
     "graphql": "16.0.0-experimental-stream-defer.5",
     "ts-node": "10.4.0",
-    "typescript": "^4.4.4"
+    "typescript": "4.7.4"
   }
 }
