--- a/examples/error-handling/package.json
+++ b/examples/error-handling/package.json
@@ -11,6 +11,6 @@
     "cross-undici-fetch": "^0.4.2",
     "graphql": "^16.1.0",
     "ts-node": "10.4.0",
-    "typescript": "^4.4.4"
+    "typescript": "4.7.4"
   }
 }
