--- a/examples/graphql-config/package.json
+++ b/examples/graphql-config/package.json
@@ -15,6 +15,6 @@
     "graphql": "^16.1.0",
     "graphql-yoga": "2.9.2",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "4.7.4"
   }
 }
