--- a/examples/issue-template/package.json
+++ b/examples/issue-template/package.json
@@ -3,7 +3,7 @@
   "version": "1.9.2",
   "private": true,
   "devDependencies": {
-    "typescript": "^4.6.3",
+    "typescript": "4.7.4",
     "ts-node-dev": "^1.1.8",
     "ts-node": "^10.7.0"
   },
