--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "rimraf": "^3.0.2",
     "supertest": "^6.1.6",
     "ts-jest": "^28.0.0",
-    "typescript": "^4.4.4"
+    "typescript": "4.7.4"
   },
   "resolutions": {
     "@changesets/apply-release-plan": "6.0.0",
