chore: dedupe dependencies

--- a/examples/issue-template/package.json
+++ b/examples/issue-template/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "devDependencies": {
     "typescript": "4.7.4",
-    "ts-node-dev": "^1.1.8",
-    "ts-node": "^10.7.0"
+    "ts-node-dev": "1.1.8",
+    "ts-node": "10.8.1"
   },
   "dependencies": {
     "@graphql-yoga/node": "^2.9.2",
