--- a/e2e/package.json
+++ b/e2e/package.json
@@ -10,7 +10,7 @@
     "@pulumi/awsx": "0.40.0",
     "@pulumi/aws": "5.8.0",
     "@pulumi/docker": "3.2.0",
-    "@types/node": "^17.0.42",
+    "@types/node": "16.11.7",
     "typescript": "4.7.4",
     "ts-node": "10.8.1"
   },
