--- a/examples/defer-stream/package.json
+++ b/examples/defer-stream/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@graphql-yoga/node": "2.9.2",
-    "graphql": "16.0.0-experimental-stream-defer.5",
-    "ts-node": "10.4.0",
+    "graphql": "16.0.0-experimental-stream-defer.5"
+  },
+  "devDependencies": {
+    "ts-node": "10.8.1",
     "typescript": "4.7.4"
   }
 }
