--- a/examples/error-handling/package.json
+++ b/examples/error-handling/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@graphql-yoga/node": "2.9.2",
     "cross-undici-fetch": "^0.4.2",
-    "graphql": "^16.1.0",
-    "ts-node": "10.4.0",
+    "graphql": "^16.1.0"
+  },
+  "devDependencies": {
+    "ts-node": "10.8.1",
     "typescript": "4.7.4"
   }
 }
