--- a/examples/fastify-modules/package.json
+++ b/examples/fastify-modules/package.json
@@ -12,10 +12,10 @@
     "@graphql-yoga/node": "2.9.2",
     "fastify": "4.0.2",
     "graphql-modules": "2.0.0",
-    "reflect-metadata": "0.1.13",
-    "ts-node": "10.4.0"
+    "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
-    "@types/node": "^16.11.7"
+    "@types/node": "16.11.7",
+    "ts-node": "10.8.1"
   }
 }
