--- a/examples/fastify/package.json
+++ b/examples/fastify/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "@graphql-yoga/node": "2.9.2",
     "fastify": "4.0.2",
-    "ts-node": "10.4.0",
     "pino-pretty": "8.0.0"
   },
   "devDependencies": {
-    "@types/node": "^16.11.7"
+    "@types/node": "16.11.7",
+    "ts-node": "10.8.1"
   }
 }
