--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -76,7 +76,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@types/node": "^16.11.7",
+    "@types/node": "16.11.7",
     "bob-the-bundler": "2.0.0-canary-57a6054.0",
     "html-minifier-terser": "7.0.0-beta.0"
   },
