--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -72,14 +72,14 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@envelop/disable-introspection": "^3.3.1",
+    "@envelop/disable-introspection": "3.3.3",
     "@envelop/live-query": "3.3.3",
-    "@types/eventsource": "^1",
-    "@types/node": "^16.11.7",
+    "@types/eventsource": "1.1.9",
+    "@types/node": "16.11.7",
     "bob-the-bundler": "2.0.0-canary-74c1ac2.0",
-    "eventsource": "^2.0.0",
+    "eventsource": "2.0.2",
     "graphql": "^16.0.1",
-    "graphql-scalars": "^1.16.1",
+    "graphql-scalars": "1.17.0",
     "puppeteer": "14.4.1"
   },
   "peerDependencies": {
