modules let's gooo (#1313)
* wip

* Ignore wasm files

* Fix Typechecking

* chore: one typescript version is enough

* chore: dedupe dependencies

* chore: make the check more generic

Co-authored-by: Arda TANRIKULU <ardatanrikulu@gmail.com>

--- a/examples/live-query/package.json
+++ b/examples/live-query/package.json
@@ -8,9 +8,9 @@
     "check": "tsc --pretty --noEmit"
   },
   "devDependencies": {
-    "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "ts-node": "10.8.1",
+    "ts-node-dev": "1.1.8",
+    "typescript": "4.7.4"
   },
   "dependencies": {
     "@envelop/live-query": "3.3.0",
