--- a/examples/aws-lambda/package.json
+++ b/examples/aws-lambda/package.json
@@ -17,11 +17,11 @@
   "devDependencies": {
     "@aws-cdk/assert": "2.17.0",
     "@types/aws-lambda": "8.10.93",
-    "@types/node": "^16.11.7",
-    "ts-node": "10.7.0",
+    "@types/node": "16.11.7",
+    "ts-node": "10.8.1",
     "aws-cdk": "2.17.0",
     "aws-cdk-lib": "2.17.0",
-    "typescript": "4.6.2"
+    "typescript": "4.7.4"
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "1.149.0",
