--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -10,8 +10,9 @@
     "@graphql-yoga/node": "2.9.2",
     "@types/express": "^4.17.13",
     "express": "^4.17.1",
-    "supertest": "^6.1.6",
-    "ts-node": "10.4.0",
-    "typescript": "4.5.2"
+    "supertest": "^6.1.6"
+  },
+  "devDependencies": {
+    "ts-node": "10.8.1"
   }
 }
