--- a/examples/file-upload-nexus/package.json
+++ b/examples/file-upload-nexus/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@graphql-yoga/node": "2.9.2",
     "graphql": "16.1.0",
-    "nexus": "^1.3.0",
-    "ts-node": "10.4.0",
-    "typescript": "4.5.2"
+    "nexus": "^1.3.0"
+  },
+  "devDependencies": {
+    "ts-node": "10.8.1",
+    "typescript": "4.7.4"
   }
 }
