--- a/examples/graphql-config/package.json
+++ b/examples/graphql-config/package.json
@@ -13,8 +13,10 @@
     "@graphql-codegen/typescript-resolvers": "^2.4.2",
     "@graphql-tools/schema": "^8.3.1",
     "graphql": "^16.1.0",
-    "graphql-yoga": "2.9.2",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "graphql-yoga": "2.9.2"
+  },
+  "devDependencies": {
+    "ts-node": "10.8.1",
+    "typescript": "4.7.4"
   }
 }
