--- a/examples/graphql-ws/package.json
+++ b/examples/graphql-ws/package.json
@@ -10,8 +10,10 @@
     "@graphql-yoga/node": "2.9.2",
     "graphql": "16.3.0",
     "graphql-ws": "0.6.2",
-    "ws": "8.5.0",
-    "ts-node": "10.7.0",
-    "typescript": "4.6.3"
+    "ws": "8.5.0"
+  },
+  "devDependencies": {
+    "ts-node": "10.8.1",
+    "typescript": "4.7.4"
   }
 }
