--- a/examples/koa/package.json
+++ b/examples/koa/package.json
@@ -10,8 +10,10 @@
     "@graphql-yoga/node": "2.9.2",
     "@types/koa": "2.13.4",
     "koa": "2.13.4",
-    "supertest": "^6.1.6",
-    "ts-node": "10.4.0",
-    "typescript": "4.5.2"
+    "supertest": "^6.1.6"
+  },
+  "devDependencies": {
+    "ts-node": "10.8.1",
+    "typescript": "4.7.4"
   }
 }
