--- a/examples/subscriptions/package.json
+++ b/examples/subscriptions/package.json
@@ -9,13 +9,13 @@
   },
   "dependencies": {
     "@graphql-yoga/node": "2.9.2",
-    "graphql": "^16.1.0",
-    "ts-node": "10.4.0",
-    "typescript": "^4.4.4"
+    "graphql": "^16.1.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript": "^2.4.8",
-    "@graphql-codegen/typescript-resolvers": "^2.6.1"
+    "@graphql-codegen/typescript-resolvers": "^2.6.1",
+    "ts-node": "10.8.1",
+    "typescript": "4.7.4"
   }
 }
