--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "babel-jest": "^28.0.0",
     "babel-plugin-parameter-decorator": "1.0.16",
     "babel-plugin-transform-typescript-metadata": "0.3.2",
-    "bob-the-bundler": "2.0.0-canary-730aea6.0",
+    "bob-the-bundler": "2.0.0-canary-57a6054.0",
     "eslint": "^8.15.0",
     "graphql": "^16.1.0",
     "husky": "^8.0.0",
@@ -72,7 +72,7 @@
     "rimraf": "^3.0.2",
     "supertest": "^6.1.6",
     "ts-jest": "^28.0.0",
-    "typescript": "^4.4.4"
+    "typescript": "4.7.4"
   },
   "resolutions": {
     "@changesets/apply-release-plan": "6.0.0",
