--- a/website/package.json
+++ b/website/package.json
@@ -17,7 +17,7 @@
     "@next/bundle-analyzer": "^12.0.10",
     "@types/concurrently": "^6.4.0",
     "@types/mdx-js__react": "^1.5.5",
-    "@types/node": "^16.11.7",
+    "@types/node": "16.11.7",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "bob-tsm": "^1.0.0",
@@ -28,7 +28,7 @@
     "next-remote-watch": "^1.0.0",
     "open-cli": "^7.0.1",
     "fast-xml-parser": "^4.0.7",
-    "typescript": "^4.5.5",
+    "typescript": "4.7.4",
     "wait-on": "^6.0.1"
   },
   "dependencies": {
